# axum-playground

./: Cargo.toml  README.md  record.avro  schema.avro
src/: main.rs
