[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = "0.14.0"
axum = "0.6.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = [
    "macros",
    "rt-multi-thread",
    "signal"
] }
tower = { version = "0.4.13", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.3.5", features = ["request-id", "trace", "util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ulid = "1.0.0"
