[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = "0.16.0"
axum = "0.7.1"
http = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.5.0", features = ["request-id", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = "1.1.0"
